--- a/app/src/main/res/layout/activity_code.xml
+++ b/app/src/main/res/layout/activity_code.xml
@@ -26,7 +26,7 @@ tools:context=".CodeGameActivity">
         android:padding="24dp">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
