--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -14,7 +14,21 @@
         android:layout_margin="10dp"
         android:gravity="center">
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/player"
+            android:layout_width="132dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="40dp"
+            android:text="You are Player 1"
+            android:textColor="#000000"
+            android:textSize="18dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_margin="10dp"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/playerTurnText"
             android:layout_width="132dp"
             android:layout_height="30dp"
             android:layout_marginLeft="40dp"
@@ -28,7 +42,7 @@
         android:layout_margin="10dp"
         android:gravity="center">
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/countWinsPlayer1Text"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginLeft="40dp"
@@ -37,7 +51,7 @@
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/countWinsPlayer2Text"
             android:layout_width="110dp"
             android:layout_height="30dp"
             android:layout_marginLeft="30dp"
@@ -53,30 +67,30 @@
         android:gravity="center">
 
         <Button
-            android:id="@+id/button11"
+            android:id="@+id/button1"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginLeft="5dp"
             android:backgroundTint="@color/yellow"
-            android:onClick="clickfun"
+            android:onClick="clickCell"
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/button12"
+            android:id="@+id/button2"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginLeft="5dp"
             android:backgroundTint="@color/yellow"
-            android:onClick="clickfun"
+            android:onClick="clickCell"
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/button13"
+            android:id="@+id/button3"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginLeft="5dp"
             android:backgroundTint="@color/yellow"
-            android:onClick="clickfun"
+            android:onClick="clickCell"
             android:textColor="#000000"
             android:textSize="60dp" />
     </TableRow>
@@ -87,35 +101,35 @@
         android:gravity="center">
 
         <Button
-            android:id="@+id/button14"
+            android:id="@+id/button4"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="@color/yellow"
-            android:onClick="clickfun"
+            android:onClick="clickCell"
             android:textColor="#000000"
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/button15"
+            android:id="@+id/button5"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="@color/yellow"
-            android:onClick="clickfun"
+            android:onClick="clickCell"
             android:textColor="#000000"
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/button16"
+            android:id="@+id/button6"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="@color/yellow"
-            android:onClick="clickfun"
+            android:onClick="clickCell"
             android:textColor="#000000"
             android:textSize="60dp" />
     </TableRow>
@@ -126,35 +140,35 @@
         android:gravity="center">
 
         <Button
-            android:id="@+id/button17"
+            android:id="@+id/button7"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="@color/yellow"
-            android:onClick="clickfun"
+            android:onClick="clickCell"
             android:textColor="#000000"
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/button18"
+            android:id="@+id/button8"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="@color/yellow"
-            android:onClick="clickfun"
+            android:onClick="clickCell"
             android:textColor="#000000"
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/button19"
+            android:id="@+id/button9"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="@color/yellow"
-            android:onClick="clickfun"
+            android:onClick="clickCell"
             android:textColor="#000000"
             android:textSize="60dp" />
 
@@ -165,7 +179,7 @@
         android:gravity="center">
 
         <Button
-            android:id="@+id/button110"
+            android:id="@+id/resetButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/yellow"
